# traffic-flow-modeling

./: .gitignore  README.md  pyproject.toml
src/: controller.py  main.py
src/backend/: back.py  init_objects.py  utils.py
src/backend/configs/: config.py
src/backend/dtos/: dto.py
src/backend/models/: car.py  car2.py  car_agent.py  car_ai.py  car_ai2.py  roy2.py  roy3.py  roy_folowing.py
src/backend/models/following/: car.py  car_ai.py
src/backend/models/roy/: roy.py  roy3.py
src/backend/models/roy_following/: car2.py  roy_folowing.py
src/backend/tests/: conftest.py
src/backend/tests/car/: test_acceleration.py  test_move.py  test_setting.py  test_update.py
src/backend/tests/car_ai/: test_acceleration.py
src/controllers/: car_follow_contr.py  controller.py  front.py  init_objects.py
src/data/: dto.py
src/data/asserts/map/: map.tiled-session  map_v_1.tmx  map_v_2.tmx  tilemap.tsx  tilemap_packed.tsx
src/example/: car_roy.py  car_roy2.py
src/foo_2/: sun.py
src/frontend/: front.py  utils.py
src/frontend/models/: car_front.py  map.py
src/frontend/tests/car/: test_update.py
src/frontend/tests/car_ai/: test_acceleration.py  test_move.py  test_update.py
src/graphs/: car_following.py  car_roy.py  car_roy_following.py  cart_folowing.py
src/models/: car.py  data.py  dto.py  map.py
src/utils/: foo.py  utils.py
